[package]
name = "kerustal"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9"
x86_64 = "0.14"
pc-keyboard = "0.7.0"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
run-command = ["qemu-system-x86_64", "-drive", "format=raw,file={}"]
